[project]
name = "test-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "discord>=2.3.2",
    "discord-py>=2.6.4",
    "google-api-python-client>=2.188.0",
    "google-auth>=2.48.0",
    "google-auth-oauthlib>=1.2.4",
    "gspread>=6.2.1",
    "pandas>=3.0.0",
    "python-dotenv>=1.2.1",
]
